# src/routes/payment.routes.js
@@ -8,24 +8,35 @@ import geoip from "geoip-lite";
 
 const router = express.Router();
 
-router.post(
-  "/paypal/create-order",
+// router.post(
+//   "/paypal/create-order",
+//   authenticateToken(true),
+//   asyncHandler(async (req, res) => {
+//     // #swagger.tags = ['Payment']
+//     const { planId } = req.body;
+//     const userId = req.user.sub;
+//     const ip = req.ip;
+//     const geo = geoip.lookup(ip);
+//     const approveUrl = await paymentService.createOrderPaypal(
+//       {
+//         planId,
+//         userId,
+//       },
+//       geo
+//     );
+
+//     success(res, approveUrl);
+//   })
+// );
+
+router.get(
+  "/",
   authenticateToken(true),
   asyncHandler(async (req, res) => {
     // #swagger.tags = ['Payment']
-    const { planId } = req.body;
     const userId = req.user.sub;
-    const ip = req.ip;
-    const geo = geoip.lookup(ip);
-    const approveUrl = await paymentService.createOrderPaypal(
-      {
-        planId,
-        userId,
-      },
-      geo
-    );
-
-    success(res, approveUrl);
+    const subs = await paymentService.getPaymentHistory({ userId });
+    success(res, subs);
   })
 );
 
